src/scss/components/_site-head.scss
.site-head {
  position: sticky;
  top: 0;
  z-index: 1000;
  background-color: var(--color-bg);

  &__inner {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 0.3rem 1.5rem;
    align-items: center;
    padding: 1rem 0;

    ::after {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 2px;
      background: var(--color-text);
    }
  }

  &__site-name {
    @include apply-utility('weight', 'regular');
    text-decoration: none;
    color: var(--color-text);
    line-height: 1.25;
    font-size: get-size(700);
  }
}

